--- a/WhatsApp/app/src/main/res/layout/activity_group_chat.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_group_chat.xml
@@ -23,6 +23,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/page_toolbar"
+        android:layout_above="@+id/myLinearLayout"
         >
 
         <LinearLayout
@@ -36,11 +37,11 @@
                 android:layout_height="wrap_content"
                 android:padding="10dp"
                 android:textAllCaps="false"
-                android:textSize="16sp"
+                android:textSize="18sp"
                 android:textColor="@android:color/background_dark"
                 android:layout_marginStart="2dp"
                 android:layout_marginEnd="2dp"
-                android:layout_marginBottom="60dp">
+                android:layout_marginBottom="50dp">
             </TextView>
 
         </LinearLayout>
