--- a/WhatsApp/app/src/main/res/layout/activity_login.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="250dp"
                 android:paddingTop="0dp"
-                android:src="@drawable/login_photo"
+                android:src="@drawable/whatsapp2"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
                 android:scaleType="centerInside">
