--- a/WhatsApp/app/src/main/res/layout/activity_register.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_register.xml
@@ -53,7 +53,7 @@
         android:id="@+id/register_button"
         android:layout_below="@id/register_password"
         android:padding="4dp"
-        android:text="Create Account"
+        android:text="Crear Cuenta"
         android:layout_marginTop="10dp"
         android:layout_marginLeft="19dp"
         android:layout_marginRight="19dp"
