--- a/WhatsApp/app/src/main/res/layout/activity_settings.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_settings.xml
@@ -5,7 +5,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SettingsActivity">
-
+    <include
+        layout="@layout/app_bar_layout"
+        android:id="@+id/settings_toolbar"
+        >
+    </include>
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/set_profile_image"
         android:layout_width="200dp"
@@ -32,7 +36,8 @@
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
         android:layout_marginTop="10dp"
-        android:padding="6dp">
+        android:padding="6dp"
+        android:visibility="visible">
     </EditText>
 
     <EditText
