--- a/WhatsApp/app/src/main/res/layout/activity_login.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_login.xml
@@ -32,7 +32,8 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/login_image"
-                android:hint="Email..."
+                android:hint="Email.."
+                android:text="pep@gmail.com"
                 android:inputType="textEmailAddress"
                 android:background="@drawable/inputs"
                 android:padding="4dp"
@@ -49,6 +50,7 @@
                 android:layout_alignParentStart="true"
                 android:layout_below="@id/login_email"
                 android:hint="Password..."
+                android:text="123456"
                 android:inputType="textPassword"
                 android:background="@drawable/inputs"
                 android:padding="4dp"
