--- a/WhatsApp/app/src/main/res/layout/activity_settings.xml
+++ b/WhatsApp/app/src/main/res/layout/activity_settings.xml
@@ -26,19 +26,19 @@
         android:id="@+id/set_user_name"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/set_profile_image"
+        android:layout_below="@+id/set_profile_image"
         android:inputType="textMultiLine"
+        android:hint="username"
         android:textAlignment="center"
-        android:hint="User Name"
+        android:drawableStart="@drawable/edit_profile"
+        android:textColor="@color/colorPrimaryDark"
         android:textStyle="bold"
         android:background="@drawable/inputs"
-        android:drawableStart="@drawable/edit_profile"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginTop="10dp"
         android:padding="6dp"
-        android:visibility="visible">
-    </EditText>
+        android:layout_marginTop="10dp"
+        />
 
     <EditText
         android:id="@+id/set_profile_status"
